--- a/1.html
+++ b/1.html
@@ -1,1 +1,9 @@
-<p>사랑해</p>>
+<!doctype html> 
+<html lang="ko"> 
+  <head>
+    <meta charset="utf-8"> 
+    <title>HTML 기본</title> 
+  <body> 
+    사랑해, 재인아 
+  </body>
+</html>
